TFP-6405: Renaming og refaktorering * Original -> forrige * Revurdering blir tatt bort siden det er implisitt * Endret RefusjonPeriodeEndring til record