@@ -21,58 +21,62 @@ import no.nav.fpsak.tidsserie.LocalDateTimeline;
 
 public class RefusjonTidslinjeTjeneste {
 
-    public static LocalDateTimeline<RefusjonPeriode> lagTidslinje(BeregningsgrunnlagDto beregningsgrunnlag, boolean utbetalt, YtelsespesifiktGrunnlag ytelsespesifiktGrunnlag) {
+    private RefusjonTidslinjeTjeneste() {
+        // Skjuler default
+    }
+
+    public static LocalDateTimeline<RefusjonPeriode> lagTidslinje(BeregningsgrunnlagDto beregningsgrunnlag, boolean gjelderForrigeGrunnlag, YtelsespesifiktGrunnlag ytelsespesifiktGrunnlag) {
         return beregningsgrunnlag.getBeregningsgrunnlagPerioder()
                 .stream()
-                .map(periode -> new LocalDateSegment<>(periode.getBeregningsgrunnlagPeriodeFom(), periode.getBeregningsgrunnlagPeriodeTom(), lagRefusjonsperiode(periode, utbetalt, ytelsespesifiktGrunnlag)))
+                .map(periode -> new LocalDateSegment<>(periode.getBeregningsgrunnlagPeriodeFom(), periode.getBeregningsgrunnlagPeriodeTom(), lagRefusjonsperiode(periode, gjelderForrigeGrunnlag, ytelsespesifiktGrunnlag)))
                 .collect(Collectors.collectingAndThen(Collectors.toList(), s -> new LocalDateTimeline<>(s).compress()));
     }
 
-    private static RefusjonPeriode lagRefusjonsperiode(BeregningsgrunnlagPeriodeDto periode, boolean utbetalt, YtelsespesifiktGrunnlag ytelsespesifiktGrunnlag) {
-        var andeler = lagAndelsliste(periode.getBeregningsgrunnlagPrStatusOgAndelList(), utbetalt, periode.getPeriode(), ytelsespesifiktGrunnlag);
+    private static RefusjonPeriode lagRefusjonsperiode(BeregningsgrunnlagPeriodeDto periode, boolean gjelderForrigeGrunnlag, YtelsespesifiktGrunnlag ytelsespesifiktGrunnlag) {
+        var andeler = lagAndelsliste(periode.getBeregningsgrunnlagPrStatusOgAndelList(), gjelderForrigeGrunnlag, periode.getPeriode(), ytelsespesifiktGrunnlag);
         return new RefusjonPeriode(periode.getBeregningsgrunnlagPeriodeFom(), periode.getBeregningsgrunnlagPeriodeTom(), andeler);
     }
 
-    private static List<RefusjonAndel> lagAndelsliste(List<BeregningsgrunnlagPrStatusOgAndelDto> bgAndeler, boolean utbetalt, Intervall periode, YtelsespesifiktGrunnlag ytelsespesifiktGrunnlag) {
+    private static List<RefusjonAndel> lagAndelsliste(List<BeregningsgrunnlagPrStatusOgAndelDto> bgAndeler, boolean gjelderForrigeGrunnlag, Intervall periode, YtelsespesifiktGrunnlag ytelsespesifiktGrunnlag) {
         return bgAndeler.stream()
-                .map(a -> new RefusjonAndel(a.getAktivitetStatus(), a.getArbeidsgiver().orElse(null), a.getArbeidsforholdRef().orElse(null),
-                        getBrutto(a, utbetalt, harUtbetalingForAndelIPeriode(a, periode, ytelsespesifiktGrunnlag)),
-                        getRefusjonskravPrÅr(a, utbetalt)))
-                .collect(Collectors.toList());
+                .map(andel -> new RefusjonAndel(andel.getAktivitetStatus(), andel.getArbeidsgiver().orElse(null), andel.getArbeidsforholdRef().orElse(null),
+                        getBrutto(andel, gjelderForrigeGrunnlag, harUtbetalingForAndelIPeriode(andel, periode, ytelsespesifiktGrunnlag)),
+                        getRefusjonskravPrÅr(andel, gjelderForrigeGrunnlag)))
+            .toList();
     }
 
     private static boolean harUtbetalingForAndelIPeriode(BeregningsgrunnlagPrStatusOgAndelDto andel, Intervall periode, YtelsespesifiktGrunnlag ytelsespesifiktGrunnlag) {
         return UtbetalingsgradTjeneste.finnUtbetalingsgradForAndel(andel, periode, ytelsespesifiktGrunnlag, false).compareTo(Utbetalingsgrad.ZERO) > 0;
     }
 
-    private static Beløp getBrutto(BeregningsgrunnlagPrStatusOgAndelDto a, boolean gjelderOriginaltGrunnlag, boolean skalHaUtbetaling) {
+    private static Beløp getBrutto(BeregningsgrunnlagPrStatusOgAndelDto a, boolean gjelderForrigeGrunnlag, boolean skalHaUtbetaling) {
         // Tar hensyn til om det er søkt om ytelse i original behandling. Dersom det ikke er søkt vil dagsats vere 0.
         // Dersom man ikke ser bort fra disse vil nye søknader kunne tolkes som et tilbaketrekk fra bruker.
         // Forklaringen på dette er at brutto > 0 selv om utbetalingsgrad = 0, men refusjonskravPrÅr = 0 når utbetalingsgrad = 0.
         // Ref: https://jira.adeo.no/browse/TSF-2590
-        var gjelderOriginaltIkkeUtbetaltAndel = gjelderOriginaltGrunnlag && (a.getDagsats() == null || a.getDagsats() == 0L);
-        var gjelderRevurdertIkkeUtbetaltAndel = !gjelderOriginaltGrunnlag && !skalHaUtbetaling;
-        if (gjelderOriginaltIkkeUtbetaltAndel || gjelderRevurdertIkkeUtbetaltAndel) {
+        var gjelderForrigeGrunnlagIkkeUtbetaltAndel = gjelderForrigeGrunnlag && (a.getDagsats() == null || a.getDagsats() == 0L);
+        var gjelderRevurdertGrunnlagIkkeUtbetaltAndel = !gjelderForrigeGrunnlag && !skalHaUtbetaling;
+        if (gjelderForrigeGrunnlagIkkeUtbetaltAndel || gjelderRevurdertGrunnlagIkkeUtbetaltAndel) {
             return Beløp.ZERO;
         } else {
             return a.getBruttoPrÅr() == null ? Beløp.ZERO : a.getBruttoPrÅr();
         }
     }
 
-    private static Beløp getRefusjonskravPrÅr(BeregningsgrunnlagPrStatusOgAndelDto andel, boolean utbetalt) {
-        if (utbetalt) {
+    private static Beløp getRefusjonskravPrÅr(BeregningsgrunnlagPrStatusOgAndelDto andel, boolean gjelderForrigeGrunnlag) {
+        if (gjelderForrigeGrunnlag) {
             return andel.getBgAndelArbeidsforhold().map(BGAndelArbeidsforholdDto::getGjeldendeRefusjonPrÅr).orElse(Beløp.ZERO);
         }
         return andel.getBgAndelArbeidsforhold().map(BGAndelArbeidsforholdDto::getInnvilgetRefusjonskravPrÅr).orElse(Beløp.ZERO);
     }
 
 
-    public static LocalDateTimeline<RefusjonPeriodeEndring> kombinerTidslinjer(LocalDateTimeline<RefusjonPeriode> originalePerioder, LocalDateTimeline<RefusjonPeriode> revurderingPerioder) {
-        return originalePerioder.intersection(revurderingPerioder, (dateInterval, segment1, segment2) ->
+    public static LocalDateTimeline<RefusjonPeriodeEndring> kombinerTidslinjer(LocalDateTimeline<RefusjonPeriode> forrigeUtbetaltTidslinje, LocalDateTimeline<RefusjonPeriode> utbetaltTidslinje) {
+        return forrigeUtbetaltTidslinje.intersection(utbetaltTidslinje, (dateInterval, segment1, segment2) ->
         {
-            var orignalPeriode = segment1.getValue();
-            var revurderingPeriode = segment2.getValue();
-            var refusjonPeriodeEndring = new RefusjonPeriodeEndring(orignalPeriode.getAndeler(), revurderingPeriode.getAndeler());
+            var forrigePeriode = segment1.getValue();
+            var periode = segment2.getValue();
+            var refusjonPeriodeEndring = new RefusjonPeriodeEndring(forrigePeriode.getAndeler(), periode.getAndeler());
             return new LocalDateSegment<>(dateInterval, refusjonPeriodeEndring);
         });
     }
